--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,4 +28,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          sudo swapoff /swapfile
+          sudo rm /swapfile
           sudo du -sk /* | sort -rn
