--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          sudo swapon -s
           sudo swapoff /swapfile
           sudo rm /swapfile
           sudo du -sk /* | sort -rn
