--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          sudo swapon -s
-          sudo swapoff /swapfile
-          sudo rm /swapfile
+
+          swapon --show=NAME --noheadings | while read swap_device; do
+             sudo swapoff $swap_device
+          done
+          
           sudo du -sk /* | sort -rn
