Remove swapfile if present
Add check to remove swapfile if it exists

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,4 +33,8 @@ jobs:
              sudo swapoff $swap_device
           done
           
+          if [ -e /swapfile ]; then
+            sudo rm /swapfile
+          fi
+          
           sudo du -sk /* | sort -rn
